feat(clearhealth): add role-selection   flow and consolidate deployment pipeline

--- a/package.json
+++ b/package.json
@@ -9,19 +9,17 @@
   ],
   "packageManager": "npm@11.6.2",
   "scripts": {
-    "dev": "doppler run -- turbo dev",
+    "dev": "doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-dev} -- turbo dev",
     "dev:local": "turbo dev",
-    "dev:legacy": "doppler run --preserve-env=NODE_ENV,PORT -- NODE_ENV=development node --import tsx server/index.ts",
-    "dev:web": "doppler run -- turbo -F web dev",
-    "dev:server": "doppler run -- turbo -F server dev",
+    "dev:legacy": "doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-dev} --preserve-env=NODE_ENV,PORT -- NODE_ENV=development node --import tsx server/index.ts",
+    "dev:web": "doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-dev} -- turbo -F web dev",
+    "dev:server": "doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-dev} -- turbo -F server dev",
     "build": "tsx script/build.ts",
     "build:turbo": "turbo build",
     "start": "NODE_ENV=production node dist/index.cjs",
-    "start:doppler": "doppler run --preserve-env=PORT,NODE_ENV -- npm run start",
-    "start:staging": "DOPPLER_CONFIG=stg doppler run --preserve-env=PORT,NODE_ENV -- npm run start",
-    "start:production": "DOPPLER_CONFIG=prd doppler run --preserve-env=PORT,NODE_ENV -- npm run start",
-    "deploy:staging": "bash ./deploy-zero-downtime-staging.sh",
-    "deploy:prod": "bash ./deploy-zero-downtime-prod.sh",
+    "start:doppler": "doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-prd} --preserve-env=PORT,NODE_ENV -- npm run start",
+    "start:production": "DOPPLER_CONFIG=prd doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-prd} --preserve-env=PORT,NODE_ENV -- npm run start",
+    "deploy": "bash ./deploy-zero-downtime.sh",
     "check": "tsc",
     "check-types": "turbo check-types",
     "db:push": "drizzle-kit push"
@@ -69,7 +67,7 @@
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.4",
-    "drizzle-orm": "^0.39.3",
+    "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.7.1",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.0.1",
