--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
-name: Deploy ClearHealth MVP (Staging)
+name: Deploy ClearHealth MVP
 
 on:
   push:
     branches:
-      - staging
+      - main
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -22,7 +23,7 @@ jobs:
         run: |
           ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Deploy to staging server with Doppler
+      - name: Deploy with Doppler
         env:
           DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
         run: |
@@ -30,7 +31,7 @@ jobs:
             set -euo pipefail
             cd ${{ secrets.WORK_DIR }}
             git fetch origin
-            git reset --hard origin/staging
+            git reset --hard origin/main
 
             if ! command -v doppler >/dev/null 2>&1; then
               echo "Installing Doppler CLI..."
@@ -44,46 +45,43 @@ jobs:
 
             export DOPPLER_TOKEN="${{ secrets.DOPPLER_TOKEN }}"
             export DOPPLER_PROJECT="${{ secrets.DOPPLER_PROJECT }}"
-            export DOPPLER_CONFIG="${{ secrets.DOPPLER_CONFIG_STAGING }}"
+            # Deployment is always production config for linux.achievengine.com
+            export DOPPLER_CONFIG="prd"
             export SUDO_PASSWORD="${{ secrets.SUDO_PASSWORD }}"
-            export PUBLIC_HEALTH_URL="${{ secrets.STAGING_HEALTH_URL }}"
-            export SERVER_DOMAIN="${{ secrets.STAGING_SERVER_DOMAIN }}"
-            export PORT_A="${{ secrets.STAGING_PORT_A }}"
-            export PORT_B="${{ secrets.STAGING_PORT_B }}"
-            export DEPLOY_STACK_NAME="${{ secrets.STAGING_DEPLOY_STACK_NAME }}"
-            export NETWORK_NAME="${{ secrets.STAGING_NETWORK_NAME }}"
-            export REDIS_VOLUME_NAME="${{ secrets.STAGING_REDIS_VOLUME_NAME }}"
+            export PUBLIC_HEALTH_URL="${{ secrets.HEALTH_URL }}"
+            export SERVER_DOMAIN="${{ secrets.SERVER_DOMAIN }}"
+            export PORT_A="${{ secrets.PORT_A }}"
+            export PORT_B="${{ secrets.PORT_B }}"
+            export DEPLOY_STACK_NAME="${{ secrets.DEPLOY_STACK_NAME }}"
+            export NETWORK_NAME="${{ secrets.NETWORK_NAME }}"
+            export REDIS_VOLUME_NAME="${{ secrets.REDIS_VOLUME_NAME }}"
 
             if [ -z "${DOPPLER_PROJECT}" ]; then
-              export DOPPLER_PROJECT="clearhealth-mvp"
+              export DOPPLER_PROJECT="trial-atlas"
             fi
-            if [ -z "${DOPPLER_CONFIG}" ]; then
-              export DOPPLER_CONFIG="stg"
-            fi
-
             doppler setup --project "${DOPPLER_PROJECT}" --config "${DOPPLER_CONFIG}" --no-interactive || echo "Doppler setup warning"
 
-            chmod +x deploy-zero-downtime-staging.sh
-            ./deploy-zero-downtime-staging.sh
+            chmod +x deploy-zero-downtime.sh
+            ./deploy-zero-downtime.sh
           SSHEOF
 
-      - name: Verify staging deployment
-        if: ${{ secrets.STAGING_HEALTH_URL != '' }}
+      - name: Verify deployment
+        if: ${{ secrets.HEALTH_URL != '' }}
         run: |
           echo "Waiting for endpoint..."
-          sleep 20
+          sleep 25
 
-          max_attempts=8
+          max_attempts=10
           attempt=1
           while [ "$attempt" -le "$max_attempts" ]; do
             echo "Verification attempt $attempt/$max_attempts"
-            if curl -fsS "${{ secrets.STAGING_HEALTH_URL }}"; then
-              echo "✅ Staging deployment successful"
+            if curl -fsS "${{ secrets.HEALTH_URL }}"; then
+              echo "✅ Deployment successful"
               exit 0
             fi
             sleep 10
             attempt=$((attempt + 1))
           done
 
-          echo "❌ Staging verification failed"
+          echo "❌ Deployment verification failed"
           exit 1
