--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
           node-version: 20
           cache: npm
 
+      - name: Pin npm version
+        run: npm i -g npm@10.8.2
+
       - name: Install dependencies
         run: npm ci
 
