feat(auth): add role-aware onboarding   flow and robust user lookup with tests

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   ],
   "packageManager": "npm@10.8.2",
   "scripts": {
-    "dev": "doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-dev} -- turbo dev",
+    "dev": "doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-dev} -- turbo dev --env-mode=loose",
     "dev:local": "turbo dev",
     "dev:legacy": "doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-dev} --preserve-env=NODE_ENV,PORT -- NODE_ENV=development node --import tsx server/index.ts",
-    "dev:web": "doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-dev} -- turbo -F web dev",
-    "dev:server": "doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-dev} -- turbo -F server dev",
+    "dev:web": "doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-dev} -- turbo -F web dev --env-mode=loose",
+    "dev:server": "doppler run --project ${DOPPLER_PROJECT:-trial-atlas} --config ${DOPPLER_CONFIG:-dev} -- turbo -F server dev --env-mode=loose",
     "build": "tsx script/build.ts",
     "build:turbo": "turbo build",
     "start": "NODE_ENV=production node dist/index.cjs",
